// EA relative work (GPGPU ...)

--- a/papers/GECCO2011/dae_mt/dae_mt.bib
+++ b/papers/GECCO2011/dae_mt/dae_mt.bib
@@ -77,6 +77,14 @@ OpenMP
 	PUBLISHER = {},
 	YEAR = {2002}	}
 
+@INPROCEEDINGS{maitre:gecco2009,
+	AUTHOR = "O. Maitre and L.A. Baumes and N. Lachiche and A. Corma and P. Collet",
+	TITLE = "{Coarse Grain Parallelization of Evolutionary Algorithms on GPGPU Cards with EASEA}",
+	BOOKTITLE = "$19^{th}$ Genetic and Evolutionary Computation Conference (GECCO'09)",
+	PAGES = {1403-1410},
+	PUBLISHER = {ACM Press},
+	YEAR = {2009}	}
+
 % Parallel Planning Systems
 
 @ARTICLE{burns:JAIR2010,
