--- a/papers/GECCO2011/dae_mt/dae_mt.tex
+++ b/papers/GECCO2011/dae_mt/dae_mt.tex
@@ -182,6 +182,13 @@ simple {\it run level parallelism}, EA with {\it global parallelism} where the e
 The run level parallelism being trivially achieved by running several runs concurrently, the first step when parallelizing a new algorithm is often to try the global
 parallelization approach, because the evaluation step is often the most costly part of EAs and because individual evaluations are generally intrinsically independent.
 
+A parallel extension of EO, \PARADISEO, has been proposed by Cahon et al. \cite{paradiseo:JHeuristics2004}. It is based on the Message Passing Interface (MPI) and proposes several parallelization schemes, available by calling wrappers around common functions of EO. \PARADISEO\ targets multi-processors machines, especially clusters and grids, for running large-scale, general purpose EAs.
+As we are targeting a multicore architecture, and since our evaluation function has a large memory footprint, message passing may introduce a time consuming memory copy overhead. 
+This reason discards the \PARADISEO\ framework.
+
+Another attractive parallel architecture is the GPGPU card with a very good processor-price ratio. The work described in \cite{maitre:gecco2009} shows how a general scheme can be designed for EAs through the EASEA language. But the limitations that are pointed out can hardly be avoided in our case. Firstly, without stack, functional calls are forbidden on a GPGPU card: the whole code must be inlined; this would entail to inline the \YAHSP\ solver entirely! Secondly, a global variable has no sense, and we got plenty of them in \DAEYAHSP.
+Moreover; \YAHSP\ uses a memoization mechanism which is a global shared-memory. And finally speedups are obtain for very large size of population (e.g. 5000, 20000) which is not the average case here. For these reasons we also discarded this type of architecture.
+
 \subsection{Parallel Planning}
 \label{section:previous-work}
 
@@ -258,8 +265,7 @@ For the sequential release, Darwinian-related parameters of \DAEX\ have been
 fixed after some early experiments \cite{dae:evocop2006} whereas parameters
 related to the variation operators have been tuned using the Racing method \cite{dae:gecco2010}.
 
-All experiments were done with \DAEYAHSP: the instantiation of \DAEX\ with the \YAHSP\ heuristic forward search solver \cite{yahsp:icaps2004}. % + YAHSP memoing
-                                                                                                                                               % shared by all searches. 
+All experiments were done with \DAEYAHSP: the instantiation of \DAEX\ with the \YAHSP\ heuristic forward search solver \cite{yahsp:icaps2004}. 
 We added two novelties to the version described in \cite{dae:icaps2010}.
 One important parameter is the maximum number of expanded nodes allowed to the \YAHSP\ sub-solver which defines empirically what is
 considered as an easy problem for \YAHSP. As a matter of fact, the minimum number of required nodes varies from few nodes to thousands depending of the
@@ -318,8 +324,8 @@ In order to speed up the search process, a memoization mechanism has been introd
 \YAHSP\ and carefully controlled to leave memory space for \DAE. Indeed, most of
 the time during a run of \YAHSP, and as a consequence during a run of \DAEYAHSP,
 is spent in computing the $h^{add}$ heuristic for each encountered state. During a single run of YAHSP, duplicate states are
-discarded; but during a run of \DAEYAHSP, the same state can be encoutered
-multiple times. We therefore keep track of the $h^{add}$ costs of all atoms in
+discarded; but during a run of \DAEYAHSP, the same state can be encountered
+multiple times. Therefore, we keep track of the $h^{add}$ costs of all atoms in
 the problem for each state, in order to avoid recomputing these values each time
 a duplicate state is reached. This generally leads to a speedup comprised
 between 2 and 4. When \DAEYAHSP\ runs out of memory, which obviously happens
@@ -385,7 +391,7 @@ is \emph{livelocks}, where the threads are still able to continue doing some
 work but cannot go through some portion of the code due to a similar phenomenon.
 
 Another problem that can arise is the concurrent use of a given subroutine by
-several threads, when such a subroutine or some subroutine called by it modifies
+several threads, when such a subroutine or some subroutine calledy it modifies
 some global data. This is a typical problem of reentrancy, which must be
 carefully analyzed in order to render thread-safe a parallel implementation. Two
 cases can then occur: either the global data must be shared by some threads, which
@@ -393,13 +399,6 @@ requires to protect its access, or it can be made private to each thread, thus
 necessitating to change the scope of this data.
 
 \paragraph{EO \& OpenMP}
-Standing for Evolving Objects, EO is a largely used and known framework in evolutionary computation based on the C++ template approach. It helps at designing evolutionary algorithms for hard optimization problems, from continuous to combinatorial ones.
-
-A parallel extension of EO, \PARADISEO, has been proposed by Cahon et al. \cite{paradiseo:JHeuristics2004}. It is based on the Message Passing Interface and proposes several parallelization schemes, available by calling wrappers around common functions of EO. \PARADISEO\ targets multi-processors machines, especially clusters and grids, for running large-scale, general purpose EAs.
-As we are targeting a multicore architecture, and since our evaluation function has a large memory footprint, message passing may introduce a time consuming memory copy overhead. 
-This reason discards the \PARADISEO\ framework.
-
-For a multicore architecture, a shared-memory parallelization approach is thus a better candidate. 
 In order to guarantee a non-blocking algorithm, we apply the Concurrent Read Exclusive Write (CREW) strategy\footnote{Multiple processors can read a memory cell but only one can write at a time.} of the Parallel Random Access Machine (PRAM).
 In this work, we used \OPENMP\ which defines a set of compiler directives to tell which part of a program should be parallelized and which part of memory can be shared out. 
 The main advantage of \OPENMP\ is that it is designed to make easy to parallelize an existing program \cite{special:parallelComputing2005}. The parallel shared-memory scheme may also be used as a simple approach to program clusters, either with a dedicated method, or through a virtual symmetric multiprocessing machine \cite{Huang:openmpGlobalArrays2005}.
@@ -528,7 +527,6 @@ equivalent to several other problems. In the temporal case a maximum number of
 stacks is given and the goal is to find the plan with the minimum makespan,
 without violating the maximum number of stacks constraints.
 
-
 \paragraph{Algorithm Parameters}
 All the experiments were done with the parameter set described in
 \cite{dae:icaps2010} except for the population size which varies depending on the experiment. The fixed evolution engine is a (popsize + $7 \times$ popsize)-ES: $n$ individuals generate $7 \times n$ offspring without selection.
@@ -537,8 +535,7 @@ after at least 10 generations, evolution is stopped if no improvement of the
 best fitness in the population is made during 50 generations, with a maximum of
 1000 generations.
 
-The \DAEX algorithm being stochastic, each run is repeated 11 times and the
-resulting distributions are presented as standard boxplots.
+The \DAEX algorithm being stochastic, each run is repeated 11 times and the resulting distributions are presented as standard boxplots.
 
 \subsection{Results}
 \label{section:results}
